<resources>
    <string name="app_name" translatable="false">ProjetMobile</string>
    <string name="start_voyage">Commencer un Nouveau Voyage</string>
    <string name="display_voyage">Consulter vos Voyages</string>
    <string name="last_voyages">Voir les Voyages Précédents</string>
    <string name="access_map">Accéder à la Carte</string>
    <string name="delete">Supprimer</string>
    <string name="welcome_trip">Bienvenue dans votre Journal de Voyage</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="Voyages">Voyage</string>
    <string name="maps">Maps</string>
    <string name="form">Form</string>
    <string name="Form">form</string>
    <string name="take_photo">Photo</string>
    <string name="prenez_une_photo">Prenez une photo !</string>
    <string name="appuyez">Appuyez</string>
    <string name="Choix_photo">Choisissez une photo !</string>
</resources>