<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bleu0"
    tools:context=".vue.PhotosActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Vos autres vues ici -->

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenez_une_photo"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appuyez"
            android:onClick="takePhoto"
            android:backgroundTint="@color/bleu2"
            app:layout_constraintTop_toBottomOf="@id/Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageViewFromPhoto"
            android:layout_width="340dp"
            android:layout_height="500dp"
            app:layout_constraintTop_toBottomOf="@id/take_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/take_photo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="50dp"
        app:layout_behavior="com.google.android.material.bottomappbar.BottomAppBar$Behavior"
        app:layout_anchor="@id/bottomNavigationView"
        app:layout_anchorGravity="top"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Votre BottomAppBar ici -->

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_menu"
        app:labelVisibilityMode="labeled"
        android:background="@color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
